# ClaRaDelay

./: .gitignore  CMakeLists.txt  DymolaStartup.mos  README.md  claradelay.c  claradelay.h
.github/workflows/: c-cpp.yml  ci.yml
CSource/: CMakeLists.txt  README.md  claradelay.c  claradelay.h
ClaRaDelay/: ExternalTable.mo  ExternalTables.mo  getDelayValuesAtTime.mo  getDelayValuesAtTimeArray.mo  package.mo  package.order
ClaRaDelay/Examples/: ExampleClaRaDelay.mo  ExampleClaRaDelayArray.mo  ExampleModelicaDelay.mo  package.mo  package.order
ReferenceFiles/: ClaRaDelay.Examples.ExampleClaRaDelay.csv  ClaRaDelay.Examples.ExampleClaRaDelayArray.csv  ClaRaDelay.Examples.ExampleModelicaDelay.csv
